--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
     "axios": "^0.27.1",
+    "echarts": "^4.8.0",
     "element-plus": "^2.1.11",
     "pinia": "^2.0.13",
     "qs": "^6.10.3",
