--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "axios": "^0.27.1",
     "echarts": "^4.8.0",
     "element-plus": "^2.1.11",
+    "file-saver": "^2.0.5",
     "pinia": "^2.0.13",
     "qs": "^6.10.3",
     "vue": "^3.2.8",
     "vue-axios": "^3.4.1",
+    "vue-json-excel": "^0.3.0",
     "vue-router": "^4.0.14",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "xlsx": "^0.15.5"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.2.6",
     "vite": "^2.5.2"
